Fixup for header z-index re: panel

--- a/themes/evictionlab/assets/sass/_covid-map.scss
+++ b/themes/evictionlab/assets/sass/_covid-map.scss
@@ -12,6 +12,10 @@ $eviction-labs-red: #E24000;
   }
 }
 
+header {
+  z-index: 3001;
+}
+
 .map-parent {
   position: relative;
   width: 100%;
